--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
         "@types/jest": "^27.4.0",
         "jest": "^27.4.7",
         "ts-jest": "^27.1.3",
+
+        "sass": "^1.49.0",
         "typescript": "^4.4.4",
+        
         "vite": "^2.7.2"
     }
 }
